изменил ошибку в файле config.json, исправил ошибку env в докерфайле, сделал сабмодуль

--- a/Dia TTS Server/Dockerfile
+++ b/Dia TTS Server/Dockerfile
@@ -42,7 +42,8 @@ WORKDIR /opt/app
 
 # Копируем и собираем Node.js приложение
 COPY src src
-COPY env .env
+COPY .env.example .env
+COPY config.json ./
 COPY package.json package-lock.json tsconfig.json tsconfig.build.json ./
 RUN --mount=type=cache,target=/root/.npm \
   npm ci && \
