--- a/Dia TTS Server/.env.example
+++ b/Dia TTS Server/.env.example
@@ -1,3 +1,6 @@
 LOG_LEVEL=trace
 BLOCKCHAIN_URL=http://127.0.0.1:8545
 BLOCKCHAIN_CONTRACT_ADDRESS=0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
+
+TLS_KEY="$(cat private.pem)"
+TLS_CERT="$(cat certificate.crt)"
