--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -14,6 +14,7 @@ on:
           - n8n
           - dia-tts
           - jupyter
+          - langflow
       target:
         description: 'Target'
         required: true
@@ -80,6 +81,12 @@ jobs:
           elif [ "$SOLUTION" == "jupyter" ]; then
             DOCKERFILE="./Jupyter/Dockerfile"
             DOCKERFILE_CONTEXT="./Jupyter/"
+
+          elif [ "$SOLUTION" == "langflow" ]; then
+            SUBMODULE_PATH="Langflow/langflow"
+            DOCKERFILE="./Langflow/Dockerfile"
+            DOCKERFILE_CONTEXT="./Langflow/"
+            ALLOW_MULTIPLE_UPDATE="true"
             
           else
             echo "Invalid solution name"
